JVM、spring、mvc